add_executable(sbus_test_encode_decode "${CMAKE_CURRENT_SOURCE_DIR}/sbus_encode_decode.cpp")
set_property(TARGET sbus_test_encode_decode PROPERTY C_STANDARD 99)
set_property(TARGET sbus_test_encode_decode PROPERTY CXX_STANDARD 11)
target_link_libraries(sbus_test_encode_decode rcdrivers)
add_test(NAME sbus_encode_decode COMMAND sbus_test_encode_decode)

add_executable(crsf_test_encode_decode "${CMAKE_CURRENT_SOURCE_DIR}/crsf_encode_decode.cpp")
set_property(TARGET crsf_test_encode_decode PROPERTY C_STANDARD 99)
set_property(TARGET crsf_test_encode_decode PROPERTY CXX_STANDARD 11)
target_link_libraries(crsf_test_encode_decode rcdrivers)
add_test(NAME crsf_encode_decode COMMAND crsf_test_encode_decode)
